NIM-20039: Document changes for optional data in API responses

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -63,6 +63,10 @@ tags: ["draft"]
 - Configuration Management now fully supports IPv6-configured devices with all available functionalities.
 - Added support for Cisco Viptela (Cisco Catalyst SD-WAN) when [API+CLI combined discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md) is configured.
 
+### API Changes
+#### Optional data in API responses
+In previous versions, optional fields were omitted from certain API responses when not present. As of this release, optional fields are explicitly included with a `null` value if unset.
+
 ### Other Changes
 
 - Removed feature flag `ENABLE_ACI_FVTENANT`
