NIM-18653 LoginIP Changes

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -232,9 +232,13 @@ The following tables have been updated with new columns:
   - `IPv4`
   - `IPv6`
 
-##### Deprecated  Columns
+##### Column Updates
 
-The following columns are now marked as deprecated:
+The following columns will be change in the next major release (`v8.0`). Currently this reports only the IPv4 address,
+but in the next major release, it will report either the IPv4 and IPv6 addresses based on the discovered device's IP version.
+This change will change the type of data to a simple text string that does not support CIDR or IP filtering.
+
+Affected columns:
 
 - **Inventory** --> **Devices** --> `Login IP`
 - **Management** --> **Discovery History** --> `Login IP`
@@ -244,9 +248,12 @@ The following columns are now marked as deprecated:
 - **Technology** --> **Management** --> **Telnet access** --> `Login IP`
 - **Discovery Snapshot** --> **Connectivity Report** --> `IP`
 
-!!! warning "Login IP Deprecation"
+After this change if an **Intent Rule** is using one of these columns it will be **automatically exported** to a file and the rule will be deleted.
+We expect that this change does not affect most customers. If you are using these columns please contact your Solution Architect or
+Support and they can assist you in restoring the rules.
 
-    The Login IP (`loginIp`) column is being deprecated and replaced with `loginIpv4` and `loginIpv6`.
+!!! warning "Automation Concerns"
+
     Please ensure all scripts, automations, or reports are properly updated to reflect this change.
 
 ##### Deprecated  Tables
