MQ-8014: Add release notes and LLRN for 7.3.15 GA

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -90,24 +90,32 @@ issue is resolved in one of the upcoming releases.
 
 ![Disable NAT44 discovery task for FortiGate](./7.2/7.2_disabled_task_forti_nat44.png)
 
-## v7.3.14 (July 10th, 2025; EA)
+## v7.3.15 (July 15th, 2025; EA)
 
 ```
-SHA256 (ipfabric-update-7-3-14+0.tar.zst.sig) = 1477bde8206beb2fa5250d93fd945ba9371600fd27d8416836196286abc03f76
-MD5 (ipfabric-update-7-3-14+0.tar.zst.sig) = 418ed9ced8ad619a85c9678d71e458cf
-SHA256 (ipfabric-7-3-14+0.qcow2) = fcdec24daf402f57710e5d31862ea9c873d7a4655f11f8ed910894d74d8e9ac5
-MD5 (ipfabric-7-3-14+0.qcow2) = e0925e0452026ceae91aa3e3cdf7a179
-SHA256 (ipfabric-7-3-14+0.vmdk) = 54d1f6b5ff3eb977dab5b88728c3768329e40f0e2f354bac815f6e294725a15d
-MD5 (ipfabric-7-3-14+0.vmdk) = 264f73bd1cbc1cc617b27fa5ad233405
-SHA256 (ipfabric-7-3-14+0.vhdx.zst) = 0096b8fe97c26c7a2617b72ce7a32c00de2ee011e997e90b1b072dd790b2aefa
-MD5 (ipfabric-7-3-14+0.vhdx.zst) = bd12544fdd203a52a103f810f47a061b
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-14+0.ova) = 06cc00196af1e1b852c9c47bceb81aa6a6979c9a159f7ea9154033f674e57020
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-14+0.ova) = 60be7030ab069626c6e500684756c824
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-14+0.ova) = c80b3b4910047246640d85611c56f0ef8c3875aac8924ecea1b6d005abab4042
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-14+0.ova) = c8cffd0ac04a75441732d82c86d744c6
-SHA256 (ESXi8.0-ipfabric-7-3-14+0.ova) = bb6899ad499a812ed7f0f6cfd6d0d74ca7f522439570a9cf87ef7c510b42ccae
-MD5 (ESXi8.0-ipfabric-7-3-14+0.ova) = e01a3085b075f6dccf09daa620757dfa
+SHA256 (ipfabric-update-7-3-15+0.tar.zst.sig) = a6afc4481406fccf98c3be2d38de6f68a57163a617738a853c31d6789751a0be
+MD5 (ipfabric-update-7-3-15+0.tar.zst.sig) = f9cdd873a843d454a886b8c09c6cc90c
+SHA256 (ipfabric-7-3-15+0.qcow2) = 2e3e74dfcdf2f920f306246a3f38a65cfb7747f1e0c237445e09b2242bc80796
+MD5 (ipfabric-7-3-15+0.qcow2) = 987fa49ef37aea1b8bcf7244e0844e06
+SHA256 (ipfabric-7-3-15+0.vmdk) = c86d96aea98408908cd85d8f384fa880fce77374954140e8160df0886cb04f47
+MD5 (ipfabric-7-3-15+0.vmdk) = 8d54c547ebdef52734e3c02f866af63b
+SHA256 (ipfabric-7-3-15+0.vhdx.zst) = 0947c9315969638a72d3216794162cefd45141f79f914b57420778b162f30458
+MD5 (ipfabric-7-3-15+0.vhdx.zst) = 1d97aa55ccaf8220428db53fc63f5767
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-15+0.ova) = ac6a51e8c932f55480986c2288128b8d9bd5dd8cb548e569ca0d2b0cb0e9042d
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-15+0.ova) = 87c26cac2b3bb4cefb39db4c673fe377
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-15+0.ova) = 8825d65c267514d23d0487422755eaeac3c00c8e9b73e393c8148c571111dfac
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-15+0.ova) = 6201b0376b498501d1baaabb9095874a
+SHA256 (ESXi8.0-ipfabric-7-3-15+0.ova) = 98751363b45423d024259dc476fde8d49cde3d401972d6cccc1484b73206adb2
+MD5 (ESXi8.0-ipfabric-7-3-15+0.ova) = a71be7773f4b218d4a1740cc3ba96075
 ```
+
+### Fixes
+
+#### Fatal Error While Discovery on PaloAlto
+
+In this release, we resolved an error that was inadvertently introduced by a bug fix in the previous patch release `v7.3.14`.
+
+## v7.3.14 (July 10th, 2025; EA)
 
 ### Fixes
 
