--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,16 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 547 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 549 fixed issues.
+
+## 7.3.15
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-20370` -- Medium -- Upgrade portal stuck after empty file uploaded and GPG verification failure
+- `NIM-20458` -- Highest -- Fatal Error Discovery Palo Device 10.64.128.21
 
 ## 7.3.14
 
