Corrected upgrade policy, release notes for 7.3 and improved IPF checker page

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -6,6 +6,15 @@ description: In this section, you can find the release notes for `v7.3` releases
 
 --8<-- "snippets/upgrade_version_policy.md"
 
+!!! danger "Required Steps Before Upgrading to `v7.5`"
+
+    The upcoming `v7.5` release introduces a new PostgreSQL-based database, which brings updated hardware requirements.
+    To ensure stability and optimal performance after the upgrade, we strongly recommend using directly attached SSD or NVMe storage.
+    To assess your current hardware performance, use our [ipf-checker](../../System_Administration/Command_Line_Interface/ipf_checker.md) tool by running `sudo ipf-checker -d -s`.
+
+    **WARNING**: The test may take a long time to complete. The default timeout is 30 minutes. We recommend avoiding any use of the IP Fabric appliance while the test is running.
+
+
 --8<-- "snippets/clear_browser_cache.md"
 
 ## Known Issues
@@ -90,7 +99,7 @@ issue is resolved in one of the upcoming releases.
 
 ![Disable NAT44 discovery task for FortiGate](./7.2/7.2_disabled_task_forti_nat44.png)
 
-## v7.3.15 (July 15th, 2025; EA)
+## v7.3.15 (July 15th, 2025; GA)
 
 ```
 SHA256 (ipfabric-update-7-3-15+0.tar.zst.sig) = a6afc4481406fccf98c3be2d38de6f68a57163a617738a853c31d6789751a0be
@@ -113,7 +122,7 @@ MD5 (ESXi8.0-ipfabric-7-3-15+0.ova) = a71be7773f4b218d4a1740cc3ba96075
 
 #### Fatal Error While Discovery on PaloAlto
 
-In this release, we resolved an error that was inadvertently introduced by a bug fix in the previous patch release `v7.3.14`.
+In this release, we resolved an issue where Discovery of PaloAlto devices was failing.
 
 ## v7.3.14 (July 10th, 2025; EA)
 
