NIM-19310 Adding gcp interconnect support to RN

--- a/docs/releases/release_notes/8.0_placeholder.md
+++ b/docs/releases/release_notes/8.0_placeholder.md
@@ -43,3 +43,6 @@ After this change if an **Intent Rule** is using one of these columns it will be
 We expect that this change does not affect most customers. 
 If you are using these columns please contact your Solution Architect or Support and they can assist you in restoring the rules.
 
+#### Vendor Support and Improvements
+
+- Added support for GCP Interconnect.
