--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -255,6 +255,9 @@ The following columns will be change in the next major release (`v8.0`). Current
 but in the next major release, it will report either the IPv4 and IPv6 addresses based on the discovered device's IP version.
 This change will change the type of data to a simple text string that does not support CIDR or IP filtering.
 
+The section above shows that new `IPv4` and `IPv6` columns have been added to the technology tables referenced below.
+These new columns support full CIDR search capabilities to meet your current and future filtering requirements.
+
 Affected columns:
 
 - **Inventory** --> **Devices** --> `Login IP`
