--- a/docs/releases/release_notes/8.0_placeholder.md
+++ b/docs/releases/release_notes/8.0_placeholder.md
@@ -46,3 +46,8 @@ If you are using these columns please contact your Solution Architect or Support
 #### Vendor Support and Improvements
 
 - Added support for GCP Interconnect.
+
+### Other Changes
+
+- The Feature Flag `ENABLE_ACI_SERVICEGRAPHS_ENDPOINTS` has been removed, and endpoints related to service graphs are now always downloaded.
+
