NIM-20519 document IAM update in RN for azure expressRoute [7.3]

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -12,7 +12,7 @@ description: In this section, you can find the release notes for `v7.3` releases
     To ensure stability and optimal performance after the upgrade, we strongly recommend using directly attached SSD or NVMe storage.
     To assess your current hardware performance, use our [ipf-checker](../../System_Administration/Command_Line_Interface/ipf_checker.md) tool by running `sudo ipf-checker -d -s`.
 
-    **WARNING**: The test may take a long time to complete. The default timeout is 30 minutes. We recommend avoiding any use of the IP Fabric appliance while the test is running.
+    **WARNING**: The test may take a long time to complete. The default timeout is 45 minutes. We recommend avoiding any use of the IP Fabric appliance while the test is running.
 
 
 --8<-- "snippets/clear_browser_cache.md"
@@ -315,6 +315,11 @@ is now fully supported at the API level and is also fully integrated into the UI
 
 - **New Device -- Azure ExpressRoute Circuit (ERC)**
   - Data collection and end-to-end path lookup via ERC is now supported. The path lookup via ERC when deployed in vWAN is not supported yet.
+    
+  !!! warning "Do not forget to update IAM policy"
+
+      To collect Azure ExpressRoute Circuits, the corresponding IAM policy must be updated.
+      You can download the new policy [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/azure/azure-role-7_3.json).
 
 - **New Device -- Azure RouteServer (ARS)**
   - Initial support for data collection & inventory - end-to-end path lookup via Network Virtual Appliances has been improved.
