--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -67,7 +67,7 @@ tags: ["draft"]
 
 #### Optional data in API responses
 
-In previous versions, optional fields were omitted from certain API responses when not present. As of this release, optional fields are explicitly included with a `null` value if unset.
+In previous versions, optional fields were omitted from certain API responses if they were not set. As of this release, optional fields are explicitly included with a `null` value when unset.
 
 #### Technology tables
 
