NIM-20055 AWS 7.5 IAM policy & release notes

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -15,6 +15,52 @@ description: In this section, you can find the release notes for `v7.5` releases
 
 ## `v7.5.0` (UNRELEASED)
 
+### New Features
+
+#### Cloud
+
+- **AWS Cloud WAN** -- Basic support for AWS Global and Core Networks. A new device type, "AWS Core Network Edge", will be discovered.
+Basic routing between attached VPC and core network segments is supported. Additional improvements, such as better support for
+Network Function Groups and connectivity to Direct Connect Gateways, will be added in upcoming releases.
+
+
+!!! Warning "Don't forget to update IAM policy"
+
+    In order to collect AWS Cloud WAN network data, the relevant IAM policy must be updated first.
+    You can find the updated IAM policy for IPF 7.5 [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/aws/IAM-policy-IPF_7.5.json).
+    There are three changes compared to the previous version:
+
+      1. The entire **IAM policy for EC2 has been simplified**. Instead of listing each action individually, actions are now grouped
+      (`ec2:DescribeVpcs`, `ec2:DescribeSubnets`, ... => `ec2:Describe*`). The complete list of actions can still be found in the [feature matrix](https://matrix.ipfabric.io/).
+
+      2. A new statement for **networkmanager** (Cloud WAN) has been added:
+
+      ```
+      {
+          "Sid": "IPFabricNetworkManager",
+          "Effect": "Allow",
+          "Action": [
+              "networkmanager:Describe*",
+              "networkmanager:Get*",
+              "networkmanager:List*"
+          ],
+          "Resource": "*"
+      }
+      ```
+
+      3. A new statement for **autoscaling** has been added (related to upcoming improvements for EC2 instances).
+
+      ```
+      {
+          "Sid": "IPFabricAutoScaling",
+          "Effect": "Allow",
+          "Action": [
+              "autoscaling:Describe*"
+          ],
+          "Resource": "*"
+      },
+      ```
+
 ### Improvements
 
 #### GUI
