NIM-20844 add deprecation notice of vdc/devices

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -435,6 +435,12 @@ now support **Uptime** as a device property.
   - Green Success - Check is enabled on supported platforms
   - Amber Warning - Check is not enabled  on supported platforms
 
+### API Endpoints Deprecation
+
+The below API endpoints have been marked as deprecated and the intention is to remove them in version `8.0`:
+
+- `/tables/platforms/vdc/devices`
+
 ### Experimental Features
 
 Newly added features which need to be explicitly enabled in service files. You can enable these yourself using our [feature documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md) or if you are not comfortable self-enabling these features or need further clarification, contact our Support or Solution Architect team. We will gladly help you.
