--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -13,11 +13,62 @@ description: In this section, you can find the release notes for `v7.5` releases
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## `v7.5.0` (UNRELEASED)
+## Known Issues
+
+### Broken PSQL Since Release 7.3  
+
+The **PostgreSQL (PSQL)** database was introduced in release 7.3, but it was not yet actively used. In some deployments, the PSQL database may be broken due to a missing role: `ipf_appliance_shared_role`.
+
+**Before upgrading to version 7.5**, ensure that the previous upgrade to **7.3 completed without the error**: `ERROR: role "ipf_appliance_shared_role" does not exist`. Run the following command to check:  
+
+```
+grep "ipf_appliance_shared_role" /var/log/ipf/system-upgrade-ipf/package-upgrade
+```
+
+!!! Warning
+
+    If the error found, do **not** proceed with the upgrade.
+
+### Database Migration Issues
+
+- In rare cases, Vendor API credentials may not migrate correctly to the PSQL database and may require re-entry.
+
+- BGP community settings may not import correctly and may need reconfiguration.
+
+### Missing PSQL Database Status
+
+The status page lacks PSQL database status information and a service restart option.
+
+### Multicast Path-Lookup Not Working
+
+Multicast path lookups are displayed incorrectly due to an error in the end-to-end algorithm.
+
+### Duplicate Data on Security-Related Tables
+
+Using filters may result in duplicate entries in security-related tables such as NAT44 and ACL.
+
+### Performance Issues
+
+- The Wireless AP table may load very slowly.
+
+- During snapshot loading, the GUI may become unresponsive, requiring a page refresh.
+
+### RBAC Policies
+
+When updating or creating RBAC policies, the following endpoints cannot be configured:
+
+```
+POST /support/callhome
+GET /support/vpn-start
+GET /support/vpn-status
+GET /support/vpn-stop
+```
+
+## v7.5.4 (UNRELEASED; EA)
 
 ### New Features
 
-#### Cloud
+#### AWS Cloud
 
 - **AWS Cloud WAN** -- Basic support for AWS Global and Core Networks. A new device type, "AWS Core Network Edge", will be discovered.
 Basic routing between attached VPC and core network segments is supported. Additional improvements, such as better support for
