publishing LLRN for 7.5

--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -344,7 +344,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-18513` -- High -- getMplsRoutesByDstIps - cover with path lookup test
 - `NIM-18757` -- Medium -- Cisco APIC - servicegraphs - change phase to pbrPreRouting
 - `NIM-18829` -- High -- Extend virtual wires table with hostname and site, make them clickable, show details for interfaces interfaces
-- `NIM-18884` -- Medium -- Update Intent Rules for 7.3
+- `NIM-18884` -- Medium -- Update Intent Rules
 - `NIM-18907` -- High -- NSX-T client to trigger re-auth on 500 http response with "INVALID_ARGUMENT: The token is not valid"
 - `NIM-18915` -- Medium -- Cisco APIC - service graph - extend redirection for vlan
 
