NIM-19717: Document old snapshots compatibility

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -183,3 +183,6 @@ In previous versions, optional fields were omitted from certain API responses if
   and **Cumulative IPv6 routing table**. These original names were misleading when displayed in the Device Explorer.
   Aside from the renaming, the tables remain unchanged — same data, same URL, and same structure.
 
+### Backward compatibility
+
+- Snapshots from Release `5.X` and earlier are not supported and may not load properly
