NIM-20365: Document slow report job in 7.5 EA

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -43,6 +43,8 @@ Using filters may result in duplicate entries in security-related tables such as
 - The XDP Unidirectional Neighbors table may be unable to load.
 - During snapshot loading, the GUI may become unresponsive, requiring a page refresh.
 
+- Calculating reports (Intent checks) may take longer as more snapshots are loaded.
+
 ### RBAC Policies
 
 When updating or creating RBAC policies, the following endpoints cannot be configured:
