NIM-20371 Adding licensing info about Aruba Central

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -19,7 +19,57 @@ description: In this section, you can find the release notes for `v7.3` releases
 
 ## Known Issues
 
+#### Fortinet NAT44 and Zone Firewall Tasks Causing Discovery Issues
+
+When NAT44 and Zone Firewall tasks are enabled, discovery processes may hang or
+experience significant delays when handling Fortinet devices. This can result
+in failed discoveries or cause devices to be missing from snapshots.
+
+Temporarily disabling both `NAT44` and `Zone firewall` discovery tasks for the
+`fortigate` **Family** (in **Settings --> Discovery & Snapshots --> Discovery
+Settings --> Disabled Discovery Tasks**) is the recommended hotfix until this
+issue is resolved in one of the upcoming releases.
+
+![Disabled Discovery Tasks](./7.2/7.2_disabled_task_list.png)
+
+![Disable Zone firewall discovery task for FortiGate](./7.2/7.2_disabled_task_forti_zonefw.png)
+
+![Disable NAT44 discovery task for FortiGate](./7.2/7.2_disabled_task_forti_nat44.png)
+
+#### Intent Checks Removed from Dashboard Widget
+
+When adding an intent check to a dashboard widget directly from the intent check configuration, **all other** intent checks in that widget **are removed**.
+
+## v7.3.16 (August 6th, 2025; GA)
+
+```
+SHA256 (ipfabric-update-7-3-16+0.tar.zst.sig) = d8c426f6dbfe7f05a9f1da2f694ab761ca9cd0f63ba45f26dc84ee45a875d6f5
+MD5 (ipfabric-update-7-3-16+0.tar.zst.sig) = 15196928c12bdb80ccca52494e00bd3b
+SHA256 (ipfabric-7-3-16+0.qcow2) = 5299ed756a66350f07988dd6f0b6131e6803d566ab38134b9cd90b354010e2f5
+MD5 (ipfabric-7-3-16+0.qcow2) = eb864fe6363b86c2f67fb128c3912984
+SHA256 (ipfabric-7-3-16+0.vmdk) = 8f378af13507d87cdc26b81be478164264760b074ef4ddbf9d7b1145c5ffbae4
+MD5 (ipfabric-7-3-16+0.vmdk) = 1b74ab109572bc280b2cffd277855595
+SHA256 (ipfabric-7-3-16+0.vhdx.zst) = 10e3806f87a70507a30e253d253bdf15c45d86f8b9477e4c25c29887874ffac6
+MD5 (ipfabric-7-3-16+0.vhdx.zst) = 60aacff42c6da6fe9ac6232de1dbc6da
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-16+0.ova) = f701fd08fe1a1a6fba31627d5efbcadd2df2d59f48a96e3ded06d106678060e2
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-16+0.ova) = ddb1cb2f3c7667bee0c3256a4deee094
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-16+0.ova) = 70bdb3a32cda2f34a19a8fed8a7cb95252bfb1646e3deeb224324c56a149b2e1
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-16+0.ova) = 63ed0ba2f0a399cdb314ee7743edfb9b
+SHA256 (ESXi8.0-ipfabric-7-3-16+0.ova) = 3d141a4a436941347395175cb20c477e6239b52f6abd6e21790e87b9f44b18b7
+MD5 (ESXi8.0-ipfabric-7-3-16+0.ova) = 969e6e121aa41dbc6b0a86261d95f503
+```
+
+### Improvements
+
+#### Aruba Central AP - Virtual Controller Licensing
+
+When Aruba Instant Access Points (IAPs) are managed by Aruba Central, discovering their Virtual Controller (VC) will no longer consume a license. 
+
+### Fixes
+
 #### License or Database Errors After Upgrade
+
+The following known issue has been resolved. If symlink is not found, upgrade process will automatically create it.
 
 If the IP Fabric GUI redirects to the status page after an upgrade and displays errors such as **License Error**, **ArangoDB Disconnected**, or **Failed to load initial app data**, this may indicate an issue with the ArangoDB configuration.
 
@@ -82,41 +132,7 @@ If the IP Fabric GUI redirects to the status page after an upgrade and displays 
 
 After these steps, the GUI should function correctly.
 
-#### Fortinet NAT44 and Zone Firewall Tasks Causing Discovery Issues
-
-When NAT44 and Zone Firewall tasks are enabled, discovery processes may hang or
-experience significant delays when handling Fortinet devices. This can result
-in failed discoveries or cause devices to be missing from snapshots.
-
-Temporarily disabling both `NAT44` and `Zone firewall` discovery tasks for the
-`fortigate` **Family** (in **Settings --> Discovery & Snapshots --> Discovery
-Settings --> Disabled Discovery Tasks**) is the recommended hotfix until this
-issue is resolved in one of the upcoming releases.
-
-![Disabled Discovery Tasks](./7.2/7.2_disabled_task_list.png)
-
-![Disable Zone firewall discovery task for FortiGate](./7.2/7.2_disabled_task_forti_zonefw.png)
-
-![Disable NAT44 discovery task for FortiGate](./7.2/7.2_disabled_task_forti_nat44.png)
-
 ## v7.3.15 (July 15th, 2025; GA)
-
-```
-SHA256 (ipfabric-update-7-3-15+0.tar.zst.sig) = a6afc4481406fccf98c3be2d38de6f68a57163a617738a853c31d6789751a0be
-MD5 (ipfabric-update-7-3-15+0.tar.zst.sig) = f9cdd873a843d454a886b8c09c6cc90c
-SHA256 (ipfabric-7-3-15+0.qcow2) = 2e3e74dfcdf2f920f306246a3f38a65cfb7747f1e0c237445e09b2242bc80796
-MD5 (ipfabric-7-3-15+0.qcow2) = 987fa49ef37aea1b8bcf7244e0844e06
-SHA256 (ipfabric-7-3-15+0.vmdk) = c86d96aea98408908cd85d8f384fa880fce77374954140e8160df0886cb04f47
-MD5 (ipfabric-7-3-15+0.vmdk) = 8d54c547ebdef52734e3c02f866af63b
-SHA256 (ipfabric-7-3-15+0.vhdx.zst) = 0947c9315969638a72d3216794162cefd45141f79f914b57420778b162f30458
-MD5 (ipfabric-7-3-15+0.vhdx.zst) = 1d97aa55ccaf8220428db53fc63f5767
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-15+0.ova) = ac6a51e8c932f55480986c2288128b8d9bd5dd8cb548e569ca0d2b0cb0e9042d
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-15+0.ova) = 87c26cac2b3bb4cefb39db4c673fe377
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-15+0.ova) = 8825d65c267514d23d0487422755eaeac3c00c8e9b73e393c8148c571111dfac
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-15+0.ova) = 6201b0376b498501d1baaabb9095874a
-SHA256 (ESXi8.0-ipfabric-7-3-15+0.ova) = 98751363b45423d024259dc476fde8d49cde3d401972d6cccc1484b73206adb2
-MD5 (ESXi8.0-ipfabric-7-3-15+0.ova) = a71be7773f4b218d4a1740cc3ba96075
-```
 
 ### Fixes
 
