--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,47 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 549 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 571 fixed issues.
+
+## 7.3.16
+
+### Stories
+
+Stories are high-level features, that may consist of many tasks. These would typically cover extensive functionality in IP Fabric
+
+- `NIM-16952` -- Medium -- Make ScanWorker follow the RFC0014
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19034` -- High -- Slow parsing of commands/cisco/ipv6NeighborsVrf causing rabbit disconnect/reconnect for the worker
+- `NIM-19580` -- Highest -- Discovery delayed/stuck between onDone start and finish
+- `NIM-19704` -- Medium -- Validate arangod.conf is symlinked prior to upgrade
+- `NIM-19945` -- Medium -- Try to fix file displacements after `sed` driven development
+- `NIM-19985` -- High -- PaloAlto - fix config parsing for missing categ:any statement
+- `NIM-20041` -- High -- Jumphosts are not creating the explicit `.log` files, journald has all the logs
+- `NIM-20415` -- Highest -- Attempting to send command '<command>' through a non-established session
+- `NIM-20467` -- Highest -- Scan worker - credentials list is empty even though it shouldn't be
+- `NIM-20469` -- Highest -- Fortigate interface/managed IPs not being populated/parsed
+- `NIM-20505` -- Medium -- backport73 - PaloAlto - fix config parsing for missing categ:any statement
+- `NIM-20510` -- High -- Failing BGP Advertised Routes task on nx-os
+- `NIM-20514` -- High -- Can't see current logs on 7.5
+- `NIM-20518` -- Medium -- Journal logs starting from the last boot are part of the Techsupport file
+- `NIM-20523` -- Medium -- Use `Pre-Depends` for postgresql, to ensure it is ready for packages
+- `NIM-20551` -- Medium -- ipf-system-upgrade possible race condition with upgrade-status.json
+- `NIM-20564` -- Medium -- Fortigate - global cache in preprocess task use sn without suffix
+- `NIM-20827` -- Medium -- ACI - security evaluation - expand BD's pcTags to IP ranges
+- `NIM-20849` -- Highest -- Azure tasks/routingTable mapping duration too long, blocking event loop and stuck discovery
+- `NIM-20850` -- Highest -- Azure expressRouteCircuits commands - lock could not be acquired for 3620000 millis, stuck discovery
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-20828` -- Medium -- Upgrade pre-check should check available size on the root filesystem
+- `NIM-20838` -- Medium -- Fortigate Execute tasks/pbr just for masterUnit
+- `NIM-20371` -- High -- Stop licensing lightweight wireless AP controllers
 
 ## 7.3.15
 
