--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -36,7 +36,7 @@ Using filters may result in duplicate entries in security-related tables such as
 ### Performance Issues
 
 - The Wireless AP table may load very slowly.
-- The XDP Unidirectional Neighbors table may be unable not load.
+- The XDP Unidirectional Neighbors table may be unable to load.
 - During snapshot loading, the GUI may become unresponsive, requiring a page refresh.
 
 ### RBAC Policies
