--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -43,7 +43,14 @@ Using filters may result in duplicate entries in security-related tables such as
 - The XDP Unidirectional Neighbors table may be unable to load.
 - During snapshot loading, the GUI may become unresponsive, requiring a page refresh.
 
-- Calculating reports (Intent checks) may take longer as more snapshots are loaded.
+- **Computing Intent Verification Rules** during the loading of an existing snapshot or the creation of a new snapshot (as part of pre-discovery calculations)
+may take longer than expected, as this process is not yet optimized. Performance improvements are planned and will be included in an upcoming patch release.
+
+  !!! Hint
+
+      The duration of the computation depends on the number of currently loaded snapshots. To reduce the time spent on Computing Intent Verification Rules,
+      it is recommended to minimize the number of loaded snapshots.
+
 
 ### RBAC Policies
 
