Update 7.5 release notes

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -22,12 +22,7 @@ description: In this section, you can find the release notes for `v7.5` releases
 ### Database Migration Issues
 
 - In rare cases, Vendor API credentials may not migrate correctly to the PSQL database and may require re-entry.
-
 - BGP community settings may not import correctly and may need reconfiguration.
-
-### Missing PSQL Database Status
-
-The status page lacks PSQL database status information and a service restart option.
 
 ### Multicast Path-Lookup Not Working
 
@@ -42,7 +37,6 @@ Using filters may result in duplicate entries in security-related tables such as
 - The Wireless AP table may load very slowly.
 - The XDP Unidirectional Neighbors table may be unable to load.
 - During snapshot loading, the GUI may become unresponsive, requiring a page refresh.
-
 - **Computing Intent Verification Rules** during the loading of an existing snapshot or the creation of a new snapshot (as part of pre-discovery calculations)
 may take longer than expected, as this process is not yet optimized. Performance improvements are planned and will be included in an upcoming patch release.
 
@@ -66,6 +60,32 @@ GET /support/vpn-stop
 ## v7.5.4 (UNRELEASED; EA)
 
 ### New Features
+
+#### Time-Based Filtering for Discovery History Seeds
+
+We have introduced a new setting that allows users to precisely control which IP addresses from Discovery History are reused as seeds.
+
+**API Extension**
+
+This feature is configurable through a new `discoveryHistorySeeds` attribute in the existing `PATCH /settings` API. The attribute accepts an object with these properties:
+
+`enabled` *(required)* – Enables/disables seed reuse from Discovery History
+`daysLimit` *(optional)* – Restricts seed reuse to IPs discovered within the last X days
+`afterDate` *(optional)* – Restricts seed reuse to IPs discovered after a specified date
+
+!!! Note
+
+    `daysLimit` and `afterDate` are mutually exclusive — only one may be configured at a time.
+
+**Use Cases**
+
+| Scenario | Configuration |
+|--|--|
+| **Current Behavior** -- Use all IPs from Discovery History | `{ enabled: true }` |
+| **Disable seed reuse** | `{ enabled: false }` (preserves existing `daysLimit`/`afterDate` values)|
+| **Use only IPs discovered in the last 7 days** | `{ enabled: true, daysLimit: 7 }`|
+| **Use only IPs discovered after June 1, 2025** | `{ enabled: true, afterDate: "2025-06-01" }` |
+
 
 #### AWS Cloud
 
@@ -177,7 +197,15 @@ In previous versions, optional fields were omitted from certain API responses if
 
 ### Other Changes
 
-- Removed feature flag `ENABLE_ACI_FVTENANT`
-- Tables **IPv4 routing table** and **IPv6 routing table** were previously named **Cumulative IPv4 routing table**
-  and **Cumulative IPv6 routing table**. These original names were misleading when displayed in the Device Explorer.
-  Aside from the renaming, the tables remain unchanged — same data, same URL, and same structure.
+- Feature flag `ENABLE_ACI_FVTENANT` **was removed**
+- **Routing tables** in Device Explorer **were renamed**:
+
+  - `Cumulative IPv4 routing table` → **IPv4 routing table**
+  - `Cumulative IPv6 routing table` → **IPv6 routing table**
+
+  *(Data, URLs, and structure remain unchanged; original names were misleading)*  
+
+- **Added documentation link** to Support Menu: `API Documentation`
+- **Enhanced Feature Matrix** with IPv6 support indicators:
+
+  - Added toggle filter to show/hide IPv6 support information  
