moved Performance issues to the top of Known issues

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -19,20 +19,7 @@ description: In this section, you can find the release notes for `v7.5` releases
 
 ## Known Issues
 
-### Database Migration Issues
-
-- In rare cases, Vendor API credentials may not migrate correctly to the PSQL database and may require re-entry.
-- BGP community settings may not import correctly and may need reconfiguration.
-
-### Multicast Path-Lookup Not Working
-
-Multicast path lookups are displayed incorrectly due to an error in the end-to-end algorithm.
-
-### Duplicate Data on Security-Related Tables
-
-Using filters may result in duplicate entries in security-related tables such as NAT44 and ACL.
-
-### Performance Issues
+### Performance Limitations
 
 - The Wireless AP table may load very slowly.
 - The XDP Unidirectional Neighbors table may be unable to load.
@@ -45,6 +32,18 @@ may take longer than expected, as this process is not yet optimized. Performance
       The duration of the computation depends on the number of currently loaded snapshots. To reduce the time spent on Computing Intent Verification Rules,
       it is recommended to minimize the number of loaded snapshots.
 
+### Database Migration Issues
+
+- In rare cases, Vendor API credentials may not migrate correctly to the PSQL database and may require re-entry.
+- BGP community settings may not import correctly and may need reconfiguration.
+
+### Multicast Path-Lookup Not Working
+
+Multicast path lookups are displayed incorrectly due to an error in the end-to-end algorithm.
+
+### Duplicate Data on Security-Related Tables
+
+Using filters may result in duplicate entries in security-related tables such as NAT44 and ACL.
 
 ### RBAC Policies
 
