added a new known issue discovered on 7.3

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -40,6 +40,13 @@ issue is resolved in one of the upcoming releases.
 
 When adding an intent check to a dashboard widget directly from the intent check configuration, **all other** intent checks in that widget **are removed**.
 
+#### NX-OS Routing Table Discovery Issues
+
+In version `7.3`, we introduced support for the Cisco NX-OS `show ip route detail full` command to retrieve truncated routing table information. Unfortunately, this implementation causes the discovery algorithm to hang when processing certain NX-OS devices.
+
+If you're experiencing extended discovery times (9+ hours), this issue is likely the cause. As a temporary workaround, disable the **Routing table** task for affected devices (SNs or whole NX-OS family) under:
+**Settings → Discovery & Snapshots → Discovery Settings → Disabled Discovery Tasks**.
+
 ## v7.3.16 (August 6th, 2025; GA)
 
 ```
